k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jpeg-to-pdf
  labels:
    name: jpeg-to-pdf
